k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  labels:
    app: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
      - name: demo-app
        image: registry.germainleignel.com/personal/demo-app:latest # {"$imagepolicy": "flux-system:demo-app"}
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
